--- a/assets/css/source/abstracts/_variables.scss
+++ b/assets/css/source/abstracts/_variables.scss
@@ -1,7 +1,8 @@
 // ************ Grid and breakpoints ************
-$containerWidth: 1230px;
-$gutter: 30px;
 $columns: 12;
+$column_width: 70px;
+$gutter: 30px;
+$containerWidth: $column_width*$columns + $gutter*($columns + 1);
 
 $breakpoints: (
     xs: 551,
@@ -18,11 +19,11 @@ $global_transition: 0.2s ease-in-out;
 
 
 // ************ Colors ************
-$black: #323133;
-$dark_gray: #434A54;
-$medium_gray: #CCD1D9;
-$light_gray: #F5F7FA;
-$white: #fefefe;
+$black: #000;
+$dark_gray: #595959;
+$medium_gray: #919191;
+$light_gray: #F5F5F5;
+$white: #FFF;
 
 // Functional colors
 $focus: #0072C5;
@@ -55,43 +56,70 @@ $text_bold: 700;
 
 $h1: (
     default: (
+        'font-family': $general_font,
 		'font-size': rem(48),
-		'line-height': 1.3
+        'font-weight': $text_bold,
+		'line-height': (60/48),
+        'margin-bottom': $general_margin,
+        'margin-top': 0,
 	),
-    $mobileBreakpoint: ()
+    $mobileBreakpoint: (
+		// 'font-size': rem(30),
+		// 'line-height': (40/30),
+    )
 );
 $h2: (
     default: (
+        'font-family': $general_font,
 		'font-size': rem(42),
-		'line-height': 1.3
+        'font-weight': $text_bold,
+		'line-height': (50/42),
+        'margin-bottom': $general_margin,
+        'margin-top': 0,
 	),
     $mobileBreakpoint: ()
 );
 $h3: (
     default: (
+        'font-family': $general_font,
 		'font-size': rem(32),
-		'line-height': 1.3
+        'font-weight': $text_bold,
+		'line-height': (40/32),
+        'margin-bottom': $general_margin,
+        'margin-top': 0,
 	),
     $mobileBreakpoint: ()
 );
 $h4: (
     default: (
+        'font-family': $general_font,
 		'font-size': rem(24),
-		'line-height': 1.3
+        'font-weight': $text_bold,
+		'line-height': (32/24),
+        'margin-bottom': $general_margin,
+        'margin-top': 0,
 	),
     $mobileBreakpoint: ()
 );
 $h5: (
     default: (
+        'font-family': $general_font,
 		'font-size': rem(21),
-		'line-height': 1.3
+        'font-weight': $text_bold,
+		'line-height': (28/21),
+        'margin-bottom': $general_margin,
+        'margin-top': 0,
 	),
     $mobileBreakpoint: ()
 );
 $h6: (
     default: (
+        'font-family': $general_font,
 		'font-size': rem(18),
-		'line-height': 1.3
+        'font-weight': $text_bold,
+		'line-height': (24/18),
+        'margin-bottom': $general_margin,
+        'margin-top': 0,
 	),
     $mobileBreakpoint: ()
 );
@@ -121,8 +149,11 @@ $header_height: (
 );
 $header_logoWidth: (
     default: 275px,
-    $mobileBreakpoint: 200px,
-    xs: 170px
+    $mobileBreakpoint: 200px
 );
 $header_boxShadow: 0px 4px 16px rgba(2, 82, 140, 0.1);
 $header_menuTransition: .4s;
+
+// Default page
+$default_page__padding_bottom: 60px;
+$default_page__padding_top: 60px;
