--- a/assets/css/source/base/_wp-blocks.scss
+++ b/assets/css/source/base/_wp-blocks.scss
@@ -13,12 +13,82 @@
 }
 
 
+// Containers
+@for $i from 1 to 12{
+    .is-container-#{$i} {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: #{$column_width*$i + $gutter*($i - 1)};
+    }
+}
+
+
+// Buttons
+.wp-block-buttons {
+    margin: 0 -5px -10px;
+
+    .wp-block-button {
+        margin: 0 5px 10px;
+    }
+}
+
+
+// Caption
+.wp-caption {
+    max-width: 100% !important;
+}
+
+
 // Columns
 .wp-block-columns {
     margin: 0 #{-$gutter/2};
     
     @include mediaMaxWidth(md){
-        flex-wrap: wrap;
+        flex-wrap: wrap !important;
+    }
+
+    .wp-block-columns {
+        @include mediaMaxWidth(md){
+            &:first-child {
+                margin-top: #{-$gutter/2};
+            }
+            &:last-child {
+                margin-bottom: #{-$gutter/2};
+            }
+        }
+
+        .wp-block-column {
+            @include mediaMaxWidth(md){
+                flex: 0 0 100% !important;
+            }
+        }
+    }
+    &.has-background {
+        padding: 80px 0;
+
+        @include mediaMaxWidth(md){
+            padding: 40px 0;
+        }
+
+        &:not(.alignfull) {
+            margin: 0;
+        }
+        &.alignfull {
+            position: relative;
+
+            &::before {
+                background: inherit;
+                bottom: 0;
+                content: '';
+                display: block;
+                left: 50%;
+                position: absolute;
+                top: 0;
+                transform: translateX(-50vw);
+                width: 100vw;
+                z-index: -1;
+            }
+        }
     }
 }
 .wp-block-column {
@@ -39,68 +109,49 @@
             flex: 0 0 50% !important;
         }
     }
-}
-
-.wp-caption {
-    max-width: 100% !important;
-}
-
-
-// Pullquote
-.wp-block-pullquote {
-    margin: $general_margin*3 0;
-
-    blockquote {
-        margin: 0 auto;
-        max-width: 600px;
-    }
-    p {
-        font-size: 1.333333em;
-        line-height: inherit;
-    }
-    cite {
-        &::before {
-            content: '- ';
+    .wp-block-columns:not(.is-not-stacked-on-mobile) > & {
+        @include mediaBetween(xs,782){
+            flex: 0 0 50% !important;
         }
-    }
-
-    &.is-style-default {
-        margin: $general_margin*3 0;
-        padding: 0;
     }
 }
 
 
-// Block quote
-.wp-block-quote {
-    border-left: 10px solid $general_borderColor;
-    margin: $general_margin*3 0 $general_margin*3 48px !important;
-    padding: 0 0 0 24px !important;
+// Cover
+.wp-block-cover, .wp-block-cover-image {
+    min-height: 0;
+    padding: 55px 0;
 
-    cite {
-        &::before {
-            content: '- ';
-        }
+    @include mediaMaxWidth(md){
+        padding: 30px 0;
     }
 
-    &.is-style-large {
-        p {
-            font-size: 1.333333em;
-            line-height: inherit;
+    &.alignfull {
+        .wp-block-cover__background,
+        .wp-block-cover__image-background {
+            left: 50%;
+            transform: translate(-50vw);
+            width: 100vw;
         }
+    }
+    &:first-child {
+        margin-top: #{-$default_page__padding_top};
+    }
+    &:last-child {
+        margin-bottom: #{-$default_page__padding_bottom};
     }
 }
 
 
 // Embed
 .wp-block-embed {
-    margin: $general_margin*3 0;
+    margin: $general_margin*2 0;
 
     iframe {
         max-width: 100%;
     }
     figcaption {
-        @include getStylesBreakpoints($h6);
+        color: $medium_gray;
         margin: 40px 0 0;
         text-align: center;
 
@@ -152,28 +203,92 @@
 }
 
 
-// Separator
-.wp-block-separator {
-    border-color: $general_borderColor;
-    border-style: solid;
-    border-width: 1px 0 0 0;
+// Image
+.wp-block-image {
+    > a {
+        display: block;
+        overflow: hidden;
+
+        img {
+            transition: opacity $global_transition, transform $global_transition;
+            position: relative;
+            z-index: -1;
+        }
+
+        &:hover,
+        &:focus-visible {
+            @include mediaMinWidth($mobileBreakpoint){
+                img {
+                    opacity: 0.85;
+                    transform: scale(1.05);
+                }
+            }
+        }
+    }
 }
 
 
-// Button
-.wp-block-button {
-    &__link {
-        @extend %btn;
-        background-color: $medium_gray;
-        border-color: $medium_gray;
-        color: $white;
+// Separator
+.wp-block-separator {
+    &:not(.has-background):not(.has-text-color) {
+        border-color: $general_borderColor;
+        color: $general_borderColor;
+    }
+    &:not(.is-style-wide):not(.is-style-dots) {
+        border-style: solid;
+        border-width: 1px 0 0 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
-        &:hover,
-        &:focus {
-            @include mediaMinWidth($mobileBreakpoint){
-                background-color: transparent;
-                color: $medium_gray;
-            }
+
+
+
+
+
+
+// Pullquote
+.wp-block-pullquote {
+    margin: $general_margin*3 0;
+
+    blockquote {
+        margin: 0 auto;
+        max-width: 600px;
+    }
+    p {
+        font-size: 1.333333em;
+        line-height: inherit;
+    }
+    cite {
+        &::before {
+            content: '- ';
+        }
+    }
+
+    &.is-style-default {
+        margin: $general_margin*3 0;
+        padding: 0;
+    }
+}
+
+
+// Block quote
+.wp-block-quote {
+    border-left: 10px solid $general_borderColor;
+    margin: $general_margin*3 0 $general_margin*3 48px !important;
+    padding: 0 0 0 24px !important;
+
+    cite {
+        &::before {
+            content: '- ';
+        }
+    }
+
+    &.is-style-large {
+        p {
+            font-size: 1.333333em;
+            line-height: inherit;
         }
     }
 }
