--- a/assets/css/source/global.scss
+++ b/assets/css/source/global.scss
@@ -9,6 +9,7 @@ $html_fontSize: 16px;
 @import 'base/grid';
 @import 'base/base';
 @import 'base/typography';
+@import 'base/buttons';
 @import 'base/wp-blocks';
 
 
@@ -16,13 +17,13 @@ $html_fontSize: 16px;
 
 
 /************ Components ************/
-@import 'components/accordion';
+// @import 'components/accordion';
 @import 'components/animations';
 @import 'components/forms';
-@import 'components/modal';
+// @import 'components/modal';
 @import 'components/navigation';
-@import 'components/pagination';
-@import 'components/tabs';
+// @import 'components/pagination';
+// @import 'components/tabs';
 
 
 /************ Layout ************/
@@ -32,8 +33,8 @@ $html_fontSize: 16px;
 // Content
 @import 'layout/content/post';
 
-// Sections
-@import 'layout/sections';
+// Blocks
+@import 'layout/block/hero';
 
 // Templates
 @import 'layout/templates/404';
