--- a/assets/css/source/layout/templates/_404.scss
+++ b/assets/css/source/layout/templates/_404.scss
@@ -2,4 +2,44 @@
  * Template / 404
  */
 
-.page-404 {}
+ .page-404 {
+    margin-bottom: 60px;
+    margin-top: 75px;
+
+    @include mediaBetween(xs,md){
+        margin-bottom: 40px;
+        margin-top: 40px;
+    }
+    @include mediaMaxWidth(xs){
+        margin-top: 35px;
+        margin-bottom: 25px;
+    }
+
+    &__container {
+        @include mediaBetween(xs,md){
+            max-width: 700px;
+        }
+        @include mediaMaxWidth(xs){
+            max-width: 350px;
+        }
+    }
+    &__header {
+        margin: 0 0 40px;
+    }
+    &__title {
+        margin: 0;
+        text-align: center;
+
+        &::after {
+            border-bottom: 2px solid $general_borderColor;
+            content: '';
+            display: block;
+            margin: 14px auto 0;
+            max-width: 180px;
+            width: 100%;
+        }
+    }
+    &__content {
+        text-align: center;
+    }
+}
