20221115 CSS and JS compilation

--- a/assets/css/source/abstracts/_variables.scss
+++ b/assets/css/source/abstracts/_variables.scss
@@ -51,7 +51,7 @@ $general_borderColor: darken($light_gray, 5%);
 $general_linkColor: $dark_gray;
 $general_linkColorHover: $black;
 
-$text_normal: 400;
+$text_regular: 400;
 $text_bold: 700;
 
 $h1: (
