--- a/assets/css/source/abstracts/_functions.scss
+++ b/assets/css/source/abstracts/_functions.scss
@@ -5,3 +5,15 @@
 @function rem($pxValue){
     @return #{stripUnit($pxValue) / stripUnit($general_fontSize)}rem;
 }
+
+
+// ************ URL-encode color /  ************
+@function encodecolor( $string ){
+    @if type-of($string)=='color' and str-index(#{$string}, '#')==1{
+        $hex: str-slice(ie-hex-str($string), 4);
+        $string: unquote('#{$hex}');
+
+        @return '%23' + $string;
+    }
+    @return $string;
+}
