--- a/assets/css/source/layout/templates/_blog.scss
+++ b/assets/css/source/layout/templates/_blog.scss
@@ -2,9 +2,20 @@
  * Blog
  */
 
-.feed {
-    padding-bottom: 60px;
-    padding-top: 75px;
+.news-feed {
+    padding-bottom: $default_page__padding_bottom;
+    padding-top: $default_page__padding_top;
+
+    @include mediaMaxWidth(md){
+        margin-left: auto;
+        margin-right: auto;
+    }
+    @include mediaBetween(xs,md){
+        max-width: #{700px + $gutter};
+    }
+    @include mediaMaxWidth(xs){
+        max-width: #{350px + $gutter};
+    }
 
     &__title {
         border-bottom: 1px solid $general_borderColor;
@@ -12,7 +23,7 @@
         padding-bottom: 15px;
     }
     &__item {
-        padding-bottom: #{$gutter/2};
-        padding-top: #{$gutter/2};
+        padding-bottom: #{$gutter};
+        padding-top: #{$gutter};
     }
 }
