--- a/assets/css/source/layout/templates/_front-page.scss
+++ b/assets/css/source/layout/templates/_front-page.scss
@@ -2,12 +2,12 @@
  * Front page
  */
 
-body.home {
-    .site {
-        padding-top: 0;
-    }
-    &:not(.is-scrolled) .header {
-        background: transparent;
-        box-shadow: none;
-    }
-}
+// body.home {
+//     .site {
+//         padding-top: 0;
+//     }
+//     &:not(.is-scrolled) .header {
+//         background: transparent;
+//         box-shadow: none;
+//     }
+// }
